# cv_videowriter

./: .gitignore  README.md  pyproject.toml
cv_videowriter/: __init__.py  videowriter.py
tests/: test_videowriter.py
